--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,18 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,600;0,700;1,600;1,700&display=swap');
-
 // Base typography
 $base-font-size: 1rem !default;
-$base-font: 'Barlow Semi Condensed', system-ui, 
--apple-system, BlinkMacSystemFont, 
-"Segoe UI", 
-"Roboto", 
-"Oxygen", 
-"Ubuntu", 
-"Cantarell", 
-"Fira Sans", 
-"Droid Sans", 
-"Helvetica Neue", 
-Arial, sans-serif;
+$base-font: 'Barlow Semi Condensed', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
+  'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', Arial,
+  sans-serif;
 $base-line-height: 1.5;
 
 // Responsive breakpoints
@@ -27,6 +17,7 @@ $gradient-bonus-primary: linear-gradient(hsl(189, 59%, 53%), hsl(189, 58%, 57%))
 $gradient-bonus-secondary: linear-gradient(hsl(261, 73%, 60%), hsl(261, 72%, 63%)) !default;
 $gradient-background: radial-gradient(hsl(214, 47%, 23%), hsl(237, 49%, 15%)) !default;
 
-$color-line: hsl(217, 16%, 45%) !default;
-$color-grey: hsl(229, 64%, 46%) !default;
-$color-dark: hsl(229, 25%, 31%) !default;
+$color-primary: hsl(229, 64%, 46%) !default;
+$color-grey: hsl(217, 16%, 45%) !default;
+$color-light-grey: hsl(0, 0%, 91%) !default;
+$color-dark-grey: hsl(229, 25%, 31%) !default;
