--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -1,6 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap');
 @import 'variables';
-@import 'mixins';
 @import 'common';
+
+* {
+  box-sizing: border-box;
+}
 
 html,
 body {
@@ -16,6 +20,11 @@ ol {
   padding: 0;
 }
 
+@include headings {
+  margin: 0;
+  padding: 0;
+}
+
 ul,
 ol {
   list-style: none;
@@ -25,13 +34,24 @@ ol {
 }
 
 body {
+  position: relative;
   background: $gradient-background;
-  width: 100%;
   min-width: 100vw;
-  height: 100%;
   min-height: 100vh;
-  font-weight: 600;
   font-size: 1rem;
   line-height: 1.5;
   font-family: $base-font;
+}
+
+body,
+#app {
+  width: 100%;
+  height: 100%;
+}
+
+#app {
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  padding: 2rem;
 }
