Add weapon item component

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -18,6 +18,12 @@ $gradient-bonus-secondary: linear-gradient(hsl(261, 73%, 60%), hsl(261, 72%, 63%
 $gradient-background: radial-gradient(hsl(214, 47%, 23%), hsl(237, 49%, 15%)) !default;
 
 $color-primary: hsl(229, 64%, 46%) !default;
+$color-secondary: hsl(30, 84%, 35%) !default;
+$color-tertiary: hsl(349, 84%, 35%) !default;
+$color-bonus-primary: hsl(189, 84%, 35%) !default;
+$color-bonus-secondary: hsl(261, 84%, 46%) !default;
 $color-grey: hsl(217, 16%, 45%) !default;
+$color-medium-grey: hsl(217, 16%, 80%) !default;
 $color-light-grey: hsl(0, 0%, 91%) !default;
 $color-dark-grey: hsl(229, 25%, 31%) !default;
+$color-darker-grey: hsl(237, 49%, 15%) !default;
