--- a/src/assets/scss/_mixins.scss
+++ b/src/assets/scss/_mixins.scss
@@ -33,3 +33,9 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+@mixin spacedCenterColumn {
+  flex-flow: column nowrap;
+  justify-content: space-between;
+  align-items: center;
+}
