--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -36,8 +36,6 @@ ol {
 body {
   position: relative;
   background: $gradient-background;
-  min-width: 100vw;
-  min-height: 100vh;
   font-size: 1rem;
   line-height: 1.5;
   font-family: $base-font;
@@ -46,12 +44,13 @@ body {
 body,
 #app {
   width: 100%;
+  min-width: 100vw;
   height: 100%;
+  min-height: 100vh;
 }
 
 #app {
   display: flex;
-  flex-flow: column nowrap;
-  align-items: center;
+  @include spacedCenterColumn;
   padding: 2rem;
 }
