--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -27,7 +27,7 @@ $color-medium-grey: hsl(217, 16%, 80%) !default;
 $color-light-grey: hsl(0, 0%, 91%) !default;
 $color-dark-grey: hsl(229, 25%, 31%) !default;
 $color-darker-grey: hsl(237, 49%, 15%) !default;
-$color-white: hsl(0, 0, 100%) !default;
+$color-white: hsl(0, 0%, 100%) !default;
 
 // Sizes
 $border-radius: 0.5rem;
