--- a/src/assets/scss/_common.scss
+++ b/src/assets/scss/_common.scss
@@ -16,10 +16,12 @@
   margin: 0 auto;
 }
 
-.footer-button {
+.button {
   border: none;
   border-radius: $border-radius;
   padding: 0.75rem 2rem;
+  color: $color-dark-grey;
+  font-weight: 600;
   font-family: inherit;
   letter-spacing: 2px;
   text-transform: uppercase;
